<resources>
    <string name="app_name">My Notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="create_note">Create Note</string>
    <string name="search_icon">Search Icon</string>
    <string name="back_button_for_categories">Back Button For Categories</string>
    <string name="back_btn">Back Button</string>
    <string name="save_btn">Save Button</string>
    <string name="title">Title</string>
    <string name="note_saved_fail">Note Could Note Be Saved</string>
    <string name="add_sub_category">Add Sub Note</string>
    <string name="add_image">Add Image</string>
    <string name="selected_note_not_found">Selected note not found</string>
    <string name="note_update_is_not_successful">Note update is not successful</string>
    <string name="update_note">Update Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="permission_required">Camera or storage permission required</string>
    <string name="permission_required_from_app_settings">You need to grant camera or storage permissions from the app settings</string>
    <string name="get_image">Get Image</string>
    <string name="cancel_image">Cancel Image</string>
    <string name="select_image">Select Image</string>
    <string name="note_is_not_selected">Note is not selected!</string>
    <string name="image_path_not_save_to_room_db">Image Could Note Be Saved To Room DB</string>
    <string name="error">Error</string>
    <string name="try_again">Try Again</string>
    <string name="selection_failed_please_try_again">Selection failed, please try again!</string>
    <string name="image_could_not_be_saved_to_file">Image could not be saved to file!</string>
    <string name="description">Description</string>
    <string name="note_could_be_not_found">Note could be not found</string>
    <string name="there_was_a_problem_retrieving_the_images">There was a problem retrieving the images</string>
    <string name="image_zoom">Image Zoom</string>
    <string name="this_note_is_has_image">This note is has image</string>
    <string name="this_note_is_has_sub_note">This note is has sub note</string>
    <string name="more_button">More button</string>
    <string name="close_image">Close Image</string>
    <string name="delete">Delete</string>
    <string name="is_delete_image">Do you want to delete the image?</string>
    <string name="is_delete_note">Would you like to delete the note? If so, any sub-notes and images associated with this note will also be deleted.</string>
    <string name="image_is_not_delete">Image is not delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="color">Color</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="delete_image">Delete Image</string>
    <string name="write">Write...</string>
</resources>