<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightBlue"
    tools:context=".presentation.homefragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/search_bar_background"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/search"
                app:hintTextColor="@color/blue"
                android:layout_weight="1"
                android:padding="5dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/serachEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:background="@android:color/transparent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/search_icon_background"
                android:padding="6dp"
                android:src="@drawable/ic_search_24"
                android:contentDescription="@string/search_icon" />

        </LinearLayout>

        <ImageView
            android:id="@+id/backBtnForSubNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_32"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:visibility="gone"
            android:contentDescription="@string/back_button_for_categories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recylerNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/layout_note_item"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_layout" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:fabSize="normal"
        android:layout_margin="16sp"
        android:src="@drawable/ic_add_32"
        app:tint="@null"
        android:backgroundTint="@color/blue"
        app:layout_anchor="@id/recylerNote"
        app:layout_anchorGravity="bottom|end"
        android:contentDescription="@string/create_note" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>